--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -1,5 +1,5 @@
 .bg-image {
-  background-image: url(../../assets/coffee.jpg);
+  background-image: url(~/assets/coffee.jpg);
   background-repeat: no-repeat;
   background-color: #c0bbba;
   background-blend-mode: multiply;
@@ -8,7 +8,7 @@
 }
 
 .bg-image h1 {
-  font-size: 74px;
+  font-size: 88px;
   color: #fff9e6;
   text-shadow: 1px 1px #6d4c41, 2px 2px #6d4c41, 3px 3px #6d4c41,
     4px 4px #6d4c41, 5px 5px #6d4c41;
